--- a/config/sync/views.view.proyectos.yml
+++ b/config/sync/views.view.proyectos.yml
@@ -100,7 +100,7 @@ display:
           separator: ', '
           field_api_classes: false
       pager:
-        type: mini
+        type: full
         options:
           offset: 0
           pagination_heading_level: h4
@@ -110,6 +110,8 @@ display:
           tags:
             next: ››
             previous: ‹‹
+            first: '« First'
+            last: 'Last »'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -118,6 +120,7 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
+          quantity: 5
       exposed_form:
         type: basic
         options:
@@ -220,9 +223,9 @@ display:
       style:
         type: default
         options:
-          grouping: {  }
           row_class: ''
           default_row_class: false
+          uses_fields: false
       row:
         type: 'entity:node'
         options:
@@ -238,6 +241,7 @@ display:
           query_tags: {  }
       relationships: {  }
       css_class: ''
+      use_ajax: true
       header: {  }
       footer: {  }
       display_extenders: {  }
@@ -802,6 +806,11 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+      pager:
+        type: some
+        options:
+          offset: 0
+          items_per_page: 4
       filters:
         status:
           id: status
@@ -956,6 +965,7 @@ display:
       defaults:
         title: false
         css_class: false
+        pager: false
         fields: false
         filters: false
         filter_groups: false
@@ -970,7 +980,6 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
@@ -1049,6 +1058,28 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+      pager:
+        type: some
+        options:
+          offset: 0
+          items_per_page: 5
+      cache:
+        type: none
+        options: {  }
+      sorts:
+        random:
+          id: random
+          table: views
+          field: random
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: random
+          order: ASC
+          expose:
+            label: ''
+            field_identifier: ''
+          exposed: false
       filters:
         status:
           id: status
@@ -1168,25 +1199,27 @@ display:
           separator: ''
           hide_empty: false
       defaults:
+        cache: false
         title: false
         css_class: false
+        pager: false
         style: false
         row: false
         fields: false
+        sorts: false
         filters: false
         filter_groups: false
-      css_class: 'flex justify-around gap-2 grayscale'
+      css_class: 'flex justify-around gap-2 items-start'
       display_description: ''
       display_extenders:
         metatag_display_extender:
           metatags: {  }
           tokenize: false
     cache_metadata:
-      max-age: -1
+      max-age: 0
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url.query_args
         - 'user.node_grants:view'
         - user.permissions
       tags:
