--- a/config/sync/views.view.proyectos.yml
+++ b/config/sync/views.view.proyectos.yml
@@ -1064,7 +1064,7 @@ display:
         type: some
         options:
           offset: 0
-          items_per_page: 5
+          items_per_page: 10
       cache:
         type: none
         options: {  }
@@ -1232,8 +1232,17 @@ display:
           inline: {  }
           separator: ''
           hide_empty: false
+      query:
+        type: views_query
+        options:
+          query_comment: ''
+          disable_sql_rewrite: false
+          distinct: true
+          replica: false
+          query_tags: {  }
       defaults:
         cache: false
+        query: false
         title: false
         css_class: false
         pager: false
