--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "drupal/sdc_block": "^1.0@beta",
         "drupal/sdc_display": "^1.0@beta",
         "drupal/sdc_styleguide": "^1.0@beta",
+        "drupal/simple_analytics": "^3.0",
         "drupal/splide": "^2.0",
         "drupal/storybook": "^1.0@alpha",
         "drupal/svg_image": "^3.0",
