--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "drupal/blazy": "^3.0",
         "drupal/block_class": "^2.0",
         "drupal/cl_devel": "^2.0@beta",
-        "drupal/cl_editorial": "^2.0@beta",
+        "drupal/cl_editorial": "^3.0@RC",
         "drupal/core-composer-scaffold": "^10.2",
         "drupal/core-project-message": "^10.2",
         "drupal/core-recommended": "^10.2",
@@ -37,8 +37,6 @@
         "drupal/paragraphs": "^1.17",
         "drupal/pathauto": "^1.12",
         "drupal/redirect": "^1.9",
-        "drupal/sdc_block": "^1.0@beta",
-        "drupal/sdc_display": "^1.0@beta",
         "drupal/sdc_styleguide": "^1.0@beta",
         "drupal/splide": "^2.0",
         "drupal/storybook": "^1.0@alpha",
@@ -48,6 +46,7 @@
         "drupal/upgrade_status": "^4.3",
         "drupal/viewsreference": "^2.0@beta",
         "drupal/webprofiler": "^10.1",
+        "drush/drush": "^13.3",
         "enshrined/svg-sanitize": "^0.20.0",
         "league/commonmark": "^2.5",
         "michelf/php-markdown": "^2.0",
@@ -68,7 +67,8 @@
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "php-http/discovery": true,
             "cweagans/composer-patches": true,
-            "oomphinc/composer-installers-extender": true
+            "oomphinc/composer-installers-extender": true,
+            "tbachert/spi": true
         },
         "sort-packages": true,
         "preferred-install": "dist"
@@ -146,7 +146,6 @@
     },
     "require-dev": {
         "drupal/core-dev": "^10",
-        "drupal/devel": "^5.1",
-        "drush/drush": "^12.5"
+        "drupal/devel": "^5.1"
     }
 }
