--- a/web/themes/custom/icosaedrico/icosaedrico.libraries.yml
+++ b/web/themes/custom/icosaedrico/icosaedrico.libraries.yml
@@ -6,4 +6,5 @@ global-styling:
       css/base/base.css: {}
       css/components/buttons.css: {}
       css/modules/modules.css: {}
+      css/modules/cv.css: {}
       css/output.css: {}
