--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,11 @@
         "drupal/layout_builder_component_attributes": "^2.1",
         "drupal/menu_link_attributes": "^1.3",
         "drupal/metatag": "^2.0",
+        "drupal/nomarkup": "^1.0",
         "drupal/paragraphs": "^1.17",
         "drupal/pathauto": "^1.12",
         "drupal/redirect": "^1.9",
+        "drupal/sdc_display": "^2.0@beta",
         "drupal/sdc_styleguide": "^1.0@beta",
         "drupal/simple_analytics": "^3.0",
         "drupal/splide": "^2.0",
