--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -3,7 +3,7 @@ _core:
 langcode: es
 uuid: f1d349d3-d718-4426-ab08-c14fbc851181
 name: xacobe.net
-mail: Xacobe.Net@gmail.com
+mail: xacobe.net@gmail.com
 slogan: 'Diseño & desarrollo web'
 page:
   403: ''
