--- a/web/themes/custom/icosaedrico/icosaedrico.info.yml
+++ b/web/themes/custom/icosaedrico/icosaedrico.info.yml
@@ -1,7 +1,7 @@
 name: Icosaédrico
 type: theme
 description: 20 caras
-core_version_requirement: ^8 || ^9 || ^10
+core_version_requirement: ^8 || ^9 || ^10 || ^11
 # Defines the base theme
 base theme: stable9
 # Defines libraries group in which we can add CSS/JS.
