--- a/config/sync/core.base_field_override.media.screen.thumbnail.yml
+++ b/config/sync/core.base_field_override.media.screen.thumbnail.yml
@@ -1,24 +1,23 @@
-uuid: 309e5a62-4fc4-43ce-9536-034b2424efa6
-langcode: es
+uuid: 4b2915f9-b9b8-4b06-85b0-c3e60a78538a
+langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.media.field_media_image_1
     - media.type.screen
   module:
     - image
-id: media.screen.field_media_image_1
-field_name: field_media_image_1
+id: media.screen.thumbnail
+field_name: thumbnail
 entity_type: media
 bundle: screen
-label: Image
-description: ''
-required: true
+label: Thumbnail
+description: 'The thumbnail of the media item.'
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:file'
+  handler: default
   handler_settings: {  }
   file_directory: '[date:custom:Y]-[date:custom:m]'
   file_extensions: 'png gif jpg jpeg webp'
