--- a/config/sync/language.content_settings.paragraph.view.yml
+++ b/config/sync/language.content_settings.paragraph.view.yml
@@ -1,18 +1,18 @@
-uuid: 5acfe298-f828-42e9-aa80-27fe74be3be8
-langcode: es
+uuid: bea6f4f3-8542-40e9-bdab-d97498df4ad8
+langcode: en
 status: true
 dependencies:
   config:
-    - taxonomy.vocabulary.project_tech
+    - paragraphs.paragraphs_type.view
   module:
     - content_translation
 third_party_settings:
   content_translation:
-    enabled: true
+    enabled: false
     bundle_settings:
       untranslatable_fields_hide: '0'
-id: taxonomy_term.project_tech
-target_entity_type_id: taxonomy_term
-target_bundle: project_tech
+id: paragraph.view
+target_entity_type_id: paragraph
+target_bundle: view
 default_langcode: site_default
 language_alterable: false
