--- a/config/sync/language.content_settings.paragraphs_library_item.paragraphs_library_item.yml
+++ b/config/sync/language.content_settings.paragraphs_library_item.paragraphs_library_item.yml
@@ -1,18 +1,17 @@
-uuid: 1b6b321d-5e1a-4aed-82bb-e1abf3d14579
-langcode: es
+uuid: 9db254e8-724a-4905-bce1-f41c753c1f3d
+langcode: en
 status: true
 dependencies:
-  config:
-    - media.type.screen
   module:
     - content_translation
+    - paragraphs_library
 third_party_settings:
   content_translation:
     enabled: false
     bundle_settings:
       untranslatable_fields_hide: '0'
-id: media.screen
-target_entity_type_id: media
-target_bundle: screen
+id: paragraphs_library_item.paragraphs_library_item
+target_entity_type_id: paragraphs_library_item
+target_bundle: paragraphs_library_item
 default_langcode: site_default
 language_alterable: false
