--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,8 @@
         "drupal/core-composer-scaffold": "^10",
         "drupal/core-project-message": "^10",
         "drupal/entity_usage": "^2.0@beta",
+        "drupal/gin": "^4.0",
+        "drupal/gin_toolbar": "^2.0",
         "drupal/layout_builder_component_attributes": "^2.1",
         "drupal/menu_link_attributes": "^1.3",
         "drupal/metatag": "^2.0",
