--- a/config/sync/core.entity_form_display.media.screen.default.yml
+++ b/config/sync/core.entity_form_display.media.screen.default.yml
@@ -4,6 +4,8 @@ status: true
 dependencies:
   config:
     - field.field.media.screen.field_media_image_1
+    - field.field.media.screen.field_screenshot_desktop
+    - field.field.media.screen.field_screenshot_mobile
     - image.style.thumbnail
     - media.type.screen
   module:
@@ -23,6 +25,22 @@ content:
   field_media_image_1:
     type: image_image
     weight: 0
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+  field_screenshot_desktop:
+    type: image_image
+    weight: 102
+    region: content
+    settings:
+      progress_indicator: throbber
+      preview_image_style: thumbnail
+    third_party_settings: {  }
+  field_screenshot_mobile:
+    type: image_image
+    weight: 101
     region: content
     settings:
       progress_indicator: throbber
