--- a/config/sync/core.entity_view_display.node.projects.card.yml
+++ b/config/sync/core.entity_view_display.node.projects.card.yml
@@ -48,10 +48,11 @@ content:
     weight: 0
     region: content
   field_project_tech:
-    type: entity_reference_label
+    type: entity_reference_entity_view
     label: visually_hidden
     settings:
-      link: true
+      view_mode: icon
+      link: false
     third_party_settings: {  }
     weight: 5
     region: content
