--- a/config/sync/core.entity_view_display.node.projects.default.yml
+++ b/config/sync/core.entity_view_display.node.projects.default.yml
@@ -48,9 +48,10 @@ content:
     weight: 8
     region: content
   field_project_tech:
-    type: entity_reference_label
+    type: entity_reference_entity_view
     label: hidden
     settings:
+      view_mode: default
       link: true
     third_party_settings: {  }
     weight: 7
@@ -59,7 +60,7 @@ content:
     type: entity_reference_label
     label: hidden
     settings:
-      link: true
+      link: false
     third_party_settings: {  }
     weight: 6
     region: content
