--- a/config/sync/views.view.proyectos.yml
+++ b/config/sync/views.view.proyectos.yml
@@ -5,17 +5,15 @@ dependencies:
   config:
     - core.entity_view_mode.node.card
     - field.storage.node.field_project_images
-    - image.style.max_325x325
+    - image.style.thumbnail
     - image.style.wide
     - node.type.projects
     - taxonomy.vocabulary.tipo_de_proyecto
   content:
     - 'taxonomy_term:tipo_de_proyecto:25ac848e-4a76-4e69-b2ab-26dd80abb952'
-    - 'taxonomy_term:tipo_de_proyecto:3c67ec2a-b24b-44c1-8bc3-601bdad27b8c'
   module:
     - media
     - node
-    - splide
     - taxonomy
     - user
 id: proyectos
@@ -246,430 +244,6 @@ display:
       header: {  }
       footer: {  }
       display_extenders: {  }
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - url.query_args
-        - 'user.node_grants:view'
-        - user.permissions
-      tags:
-        - 'config:field.storage.node.field_project_images'
-  block_1:
-    id: block_1
-    display_title: 'Personales - Archivados'
-    display_plugin: block
-    position: 3
-    display_options:
-      title: 'Personales - Antiguos'
-      fields:
-        field_project_images:
-          id: field_project_images
-          table: node__field_project_images
-          field: field_project_images
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: field
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: '0'
-          element_class: 'grid grid-cols-2 gap-4'
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: false
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: target_id
-          type: media_thumbnail
-          settings:
-            image_link: ''
-            image_style: max_325x325
-            image_loading:
-              attribute: lazy
-          group_column: target_id
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-      filters:
-        status:
-          id: status
-          table: node_field_data
-          field: status
-          entity_type: node
-          entity_field: status
-          plugin_id: boolean
-          value: '1'
-          group: 1
-          expose:
-            operator: ''
-        type:
-          id: type
-          table: node_field_data
-          field: type
-          entity_type: node
-          entity_field: type
-          plugin_id: bundle
-          value:
-            projects: projects
-        tid:
-          id: tid
-          table: taxonomy_index
-          field: tid
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: taxonomy_index_tid
-          operator: or
-          value:
-            5: 5
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          vid: tipo_de_proyecto
-          type: select
-          hierarchy: false
-          limit: true
-          error_message: true
-        field_project_status_value:
-          id: field_project_status_value
-          table: node__field_project_status
-          field: field_project_status_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: boolean
-          operator: '='
-          value: '1'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-        langcode:
-          id: langcode
-          table: node_field_data
-          field: langcode
-          relationship: none
-          group_type: group
-          admin_label: ''
-          entity_type: node
-          entity_field: langcode
-          plugin_id: language
-          operator: in
-          value:
-            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-      filter_groups:
-        operator: AND
-        groups:
-          1: AND
-      defaults:
-        title: false
-        css_class: false
-        fields: false
-        filters: false
-        filter_groups: false
-      css_class: 'grid grid-flow-col auto-cols-max gap-4'
-      display_description: ''
-      display_extenders:
-        metatag_display_extender:
-          metatags: {  }
-          tokenize: false
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - url.query_args
-        - 'user.node_grants:view'
-        - user.permissions
-      tags:
-        - 'config:field.storage.node.field_project_images'
-  block_2:
-    id: block_2
-    display_title: Personales
-    display_plugin: block
-    position: 2
-    display_options:
-      title: Personales
-      filters:
-        status:
-          id: status
-          table: node_field_data
-          field: status
-          entity_type: node
-          entity_field: status
-          plugin_id: boolean
-          value: '1'
-          group: 1
-          expose:
-            operator: ''
-        type:
-          id: type
-          table: node_field_data
-          field: type
-          entity_type: node
-          entity_field: type
-          plugin_id: bundle
-          value:
-            projects: projects
-        tid:
-          id: tid
-          table: taxonomy_index
-          field: tid
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: taxonomy_index_tid
-          operator: or
-          value:
-            5: 5
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          reduce_duplicates: false
-          vid: tipo_de_proyecto
-          type: select
-          hierarchy: false
-          limit: true
-          error_message: true
-        field_project_status_value:
-          id: field_project_status_value
-          table: node__field_project_status
-          field: field_project_status_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: boolean
-          operator: '='
-          value: '0'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-        langcode:
-          id: langcode
-          table: node_field_data
-          field: langcode
-          relationship: none
-          group_type: group
-          admin_label: ''
-          entity_type: node
-          entity_field: langcode
-          plugin_id: language
-          operator: in
-          value:
-            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            operator_limit_selection: false
-            operator_list: {  }
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-      filter_groups:
-        operator: AND
-        groups:
-          1: AND
-      defaults:
-        title: false
-        filters: false
-        filter_groups: false
-      display_description: ''
-      display_extenders:
-        metatag_display_extender:
-          metatags: {  }
-          tokenize: false
     cache_metadata:
       max-age: -1
       contexts:
@@ -1010,7 +584,7 @@ display:
         fields: false
         filters: false
         filter_groups: false
-      css_class: 'container-lg mx-auto'
+      css_class: 'container mx-auto'
       display_description: ''
       display_extenders:
         metatag_display_extender:
@@ -1045,8 +619,8 @@ display:
           label: ''
           exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: "<div class=\"grid-item\">\r\n  {{ field_project_images }} \r\n</div>"
             make_link: false
             path: ''
             absolute: false
@@ -1087,7 +661,7 @@ display:
           type: media_thumbnail
           settings:
             image_link: ''
-            image_style: max_325x325
+            image_style: thumbnail
             image_loading:
               attribute: lazy
           group_column: target_id
@@ -1101,10 +675,9 @@ display:
           separator: ', '
           field_api_classes: false
       pager:
-        type: some
+        type: none
         options:
           offset: 0
-          items_per_page: 10
       cache:
         type: none
         options: {  }
@@ -1228,43 +801,11 @@ display:
         groups:
           1: AND
       style:
-        type: splide
+        type: default
         options:
-          caption:
-            field_project_images: '0'
-          optionset: trabajo_archivos
-          class: ''
-          image: ''
-          link: ''
-          overlay: field_project_images
-          title: ''
-          vanilla: false
-          layout: ''
-          cache: 86400
-          admin_uri: '/es/admin/structure/views/ajax/display/proyectos/works_archived/style_options?_wrapper_format=drupal_ajax'
-          grid: ''
-          grid_medium: ''
-          grid_small: ''
-          style: ''
-          skin: ''
-          overridables:
-            arrows: '0'
-            pagination: '0'
-            autoplay: '0'
-            autoWidth: '0'
-            autoHeight: '0'
-            drag: '0'
-            wheel: '0'
-            randomize: '0'
-          thumbnail: ''
-          optionset_nav: ''
-          skin_nav: ''
-          thumbnail_effect: ''
-          navpos: ''
-          override: false
-          pagination_pos: ''
-          preserve_keys: false
-          visible_items: null
+          grouping: {  }
+          row_class: ''
+          default_row_class: false
       row:
         type: fields
         options:
@@ -1283,7 +824,7 @@ display:
         sorts: false
         filters: false
         filter_groups: false
-      css_class: 'flex justify-around gap-2 items-start'
+      css_class: 'masonry-grid flex justify-around gap-2 items-start'
       display_description: ''
       display_extenders:
         metatag_display_extender:
