--- a/config/sync/core.entity_view_display.node.projects.image.yml
+++ b/config/sync/core.entity_view_display.node.projects.image.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.projects.field_project_tech
     - field.field.node.projects.field_project_type
     - field.field.node.projects.field_project_url
+    - field.field.node.projects.field_project_year
     - field.field.node.projects.field_screenshot_desktop
     - field.field.node.projects.field_screenshot_mobile
     - image.style.max_650x650
@@ -44,6 +45,7 @@ hidden:
   field_project_tech: true
   field_project_type: true
   field_project_url: true
+  field_project_year: true
   field_screenshot_desktop: true
   field_screenshot_mobile: true
   langcode: true
