--- a/config/sync/views.view.proyectos.yml
+++ b/config/sync/views.view.proyectos.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.card
     - field.storage.node.field_project_images
+    - field.storage.node.field_project_year
     - image.style.thumbnail
     - image.style.wide
     - node.type.projects
@@ -674,6 +675,69 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+        field_project_year:
+          id: field_project_year
+          table: node__field_project_year
+          field: field_project_year
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: false
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
       pager:
         type: none
         options:
@@ -803,7 +867,11 @@ display:
       style:
         type: default
         options:
-          grouping: {  }
+          grouping:
+            -
+              field: field_project_year
+              rendered: true
+              rendered_strip: false
           row_class: ''
           default_row_class: false
       row:
@@ -824,7 +892,7 @@ display:
         sorts: false
         filters: false
         filter_groups: false
-      css_class: 'masonry-grid flex justify-around gap-2 items-start'
+      css_class: 'flex justify-around gap-2 items-start'
       display_description: ''
       display_extenders:
         metatag_display_extender:
@@ -839,3 +907,4 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.node.field_project_images'
+        - 'config:field.storage.node.field_project_year'
